--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -2,19 +2,18 @@ name: Python Automation Workflow
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main, develop ]
+    branches: []
+
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: generic-latest
     strategy:
       matrix:
-        python-version: ['3.9', '3.10', '3.11']
+        python-version: ['3.13.9']
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
@@ -24,7 +23,6 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
         pip install pytest pytest-cov
 
     - name: Run tests
