--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: generic-latest
     strategy:
       matrix:
-        python-version: ['3.13.9']
+        python-version: ['3.9', '3.10', '3.11']
 
     steps:
     - uses: actions/checkout@v4
