--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: generic-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ['3.9', '3.10', '3.11']
